# Atlas-RAG-Platform

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: phase-1-checklist.md  phase-2-checklist.md  phase-3-checklist.md  phase-5-checklist.md  phase-6-checklist.md  technical-plan.md
src/: __init__.py  main.py
src/application/: __init__.py  ports.py
src/application/use_cases/: __init__.py  rag_pipeline.py
src/domain/: __init__.py  answer.py  chunk.py  document.py  query.py
src/infrastructure/: __init__.py
src/infrastructure/config/: __init__.py  settings.py
src/infrastructure/embeddings/: __init__.py  gemini_embeddings.py
src/infrastructure/llm/: __init__.py  gemini_generator.py
src/infrastructure/logging/: __init__.py  setup.py
src/infrastructure/observability/: __init__.py  langsmith_tracer.py
src/infrastructure/vector_store/: __init__.py  qdrant_adapter.py
src/interfaces/: __init__.py
tests/: test_infrastructure_langsmith_observability.py  test_infrastructure_qdrant_adapter.py  test_infrastructure_settings.py
tests/application/: test_rag_pipeline.py
tests/domain/: test_entities.py
